<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pac.ovum.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.pac.ovum.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_cycles"
        android:name="com.pac.ovum.ui.cycles.CyclesFragment"
        android:label="@string/menu_cycles"
        tools:layout="@layout/fragment_cycles" />
</navigation>